--- a/writing/draft.tex
+++ b/writing/draft.tex
@@ -229,13 +229,13 @@ A suitable approach is to identify the theoretical capacity of an NB-IoT cell. T
 \clearpage
 \section{NB-IoT}
 
-According to 3GPP there are three implementations of wide area network (WAN) narrowband internet-of-things (NB-IoT). One uses a single GSM transmission channel (TCH) and is integrated into the GSM network. The other two are co-existing with LTE where one uses the guard band between LTE channels and the other is embedded into the LTE channel.
+3GPP defines wide area network (WAN) narrowband internet-of-things (NB-IoT) to handle communication with connected devices. The physical channel structure is the same as LTE, but scaled down to occupy less bandwidth. The downscaling provides flexibility to place the carrier. One solution is to place it on a single  GSM transmission channel (TCH), and that way integrate it with the GSM network. The other two are co-existing with LTE, where one uses the guard band between LTE channels and the other is embedded into the LTE carrier \cite{schlienz}.
 
-Regardless of where the carrier resides, the physical channel structure is always the same. It is based on LTE, but scaled down to occupy less bandwidth which gives an opportunity to place the carrier with greater flexibilty. The need for high throughput isn't relevant for NB-IoT, since the devices send limited amount of data. The LTE structure in itself incorporates high throughput. This can be utilised by NB-IoT, adding further data protection and reconstruction. That gives added capability to handle channel path loss of up to 20 dB {[\hghlght{missing reference}}].
+The high throughput characteristics of LTE, and the fact that NB-IoT does not need to send big volumes of data, gives an opportunity to increase the protection of the transmitted data. This is done by extra padding, more robust coding scheme and modulation. The benefit is increased link budget, allowing up to 20 dB extra attenuation, and decreased probability of wrongly received data, requiring retransmission \cite{wang}.
 
-NB-IoT downlink is defined to use 12 sub-carriers, with each sub-carrier having bandwidth of 15 kHz. That adds up to 180 kHz, which matches perfectly the GSM transmission channel (TCH) of 200 kHz. The uplink uses either a single sub-carrier, which can be of varying bandwidth: 3,75 kHz or 15 kHz, or it uses 3, 6, or 12 sub-carriers of 15 kHz bandwidth each\cite{3gpp}. The last is the same as for the downlink and the total bandwidth becomes 180 kHz.
+NB-IoT devices differ from other mobile devices, in that they aren't downlink critical. The sensor deployment requires data to be transmitted from the sensors, towards other devices or a central service. The uplink is therefore the important direction. It can be further assumed that the devices initiates the communication, not the base station.
 
-NB-IoT devices differ from other mobile devices in that they aren't downlink critical. The sensor deployment requires that data from the sensors have to be communicated with other devices or a central service. The uplink is therefore the important direction. It can be further assumed that the devices initiates the communication, not the base station. \hghlght{Investigate how the paging mechanism is implemented in NB-IoT. There must be some way for the base station to reach the UE.}
+An additional design criteria for NB-IoT, is long battery life \cite{wang}. Having the extra link budget, it can transmitt with lower power but it is also important to avoid unnecessary retransmission. In the case of retransmission, there is waiting - awake - time and extra transmission. Both require extra battery usage which has to be avoided.
 
 %The LTE guard band varies in width, depending on carrier bandwidth. Most deployments of LTE though, use 5 MHz or larger bandwidth, since the smaller bandwidths introduce exceptions from the normal structure.
 
@@ -246,6 +246,9 @@ NB-IoT devices differ from other mobile devices in that they aren't downlink cri
 %Since the structure is common, NB-IoT can be defined as functionality within the LTE carrier. According to Schlienz (2106) \cite{schlienz} there are specific RB indexes where NB-IoT can be activated. That way both functionalities (LTE and NB-IoT) are active at the same time.
 
 \subsection{Channel structure}
+
+NB-IoT downlink is defined to use 12 sub-carriers, with each sub-carrier having bandwidth of 15 kHz. That adds up to 180 kHz, which fits perfectly into the GSM transmission channel (TCH) of 200 kHz. The uplink uses either a single sub-carrier, which can be of varying bandwidth: 3,75 kHz or 15 kHz, or it uses 3, 6, or 12 sub-carriers of 15 kHz bandwidth each\cite{3gpp}. The last is the same as for the downlink and the total bandwidth becomes 180 kHz.
+
 
 \hghlght{It is important to describe the physical channels, since the analysis goes on about identifying when they reach congestion}. \point{Needs to be investigated if the higher layer channels introduce any limitation.}
 
@@ -265,6 +268,12 @@ The access process is as follows: \hghlght{These steps have to be verified from 
 \end{enumerate}
 
 The capacity limit is reached when the number of devices increases, partly due to the probability of collisions and partly due to the capacity of the dedicated channels. \hghlght{The point of the paper is to identify which one is congested before.}
+
+\point{Notes:}\vspace{-4mm}
+\begin{itemize}
+  \item \hghlght{Investigate how the paging mechanism is implemented in NB-IoT. There must be some way for the base station to reach the UE.}
+\end{itemize}
+
 
 
 \subsection{Evaluation points}
@@ -323,13 +332,13 @@ Here are some outstanding questions. One coverage class something mentioned in t
 \section{References}
 
 \begin{thebibliography}{4}
-\bibitem{wang}
-Wang, Y. P. E., Lin, X., Adhikary, A., Grovlen, A., Sui, Y., Blankenship, Y., ... \& Razaghi, H. S. (2017).
-\textit{A primer on 3GPP narrowband Internet of Things}. IEEE communications magazine, 55(3), 117-123.
-
 \bibitem{schlienz}
 Schlienz, J., \& Raddino, D. (2016).
 \textit{Narrowband internet of things whitepaper}. White Paper, Rohde\&Schwarz, 1-42.
+
+\bibitem{wang}
+Wang, Y. P. E., Lin, X., Adhikary, A., Grovlen, A., Sui, Y., Blankenship, Y., ... \& Razaghi, H. S. (2017).
+\textit{A primer on 3GPP narrowband Internet of Things}. IEEE communications magazine, 55(3), 117-123.
 
 \bibitem{3gpp}
 3GPP TS 36.201,
