--- a/writing/draft.tex
+++ b/writing/draft.tex
@@ -229,9 +229,9 @@ A suitable approach is to identify the theoretical capacity of an NB-IoT cell. T
 \clearpage
 \section{NB-IoT}
 
-3GPP defines wide area network (WAN) narrowband internet-of-things (NB-IoT) to handle communication with connected devices. The physical channel structure is the same as LTE, but scaled down to occupy less bandwidth. The downscaling provides flexibility to place the carrier. One solution is to place it on a single  GSM transmission channel (TCH), and that way integrate it with the GSM network. The other two are co-existing with LTE, where one uses the guard band between LTE channels and the other is embedded into the LTE carrier \cite{schlienz}.
+3GPP defines wide area network (WAN) narrowband internet-of-things (NB-IoT) to handle communication with connected devices. The physical channel structure is the same as LTE, but scaled down to occupy less bandwidth. The downscaling provides flexibility to place the carrier where there is available space. One solution is to place it on a single  GSM transmission channel (TCH), and that way integrate it with the GSM network. The other two are co-existing with LTE, where one uses the guard band between LTE channels and the other is embedded into the LTE carrier \cite{schlienz}.
 
-The high throughput characteristics of LTE, and the fact that NB-IoT does not need to send big volumes of data, gives an opportunity to increase the protection of the transmitted data. This is done by extra padding, more robust coding scheme and modulation. The benefit is increased link budget, allowing up to 20 dB extra attenuation, and decreased probability of wrongly received data, requiring retransmission \cite{wang}.
+The high throughput characteristics of LTE, and the fact that NB-IoT devices do not need to send big volumes of data, gives an opportunity to increase the protection of the transmitted data. This is done by extra padding, more robust coding scheme and modulation. The benefit is increased link budget, allowing up to 20 dB extra attenuation, and decreased probability of wrongly received data, requiring retransmission \cite{wang}.
 
 NB-IoT devices differ from other mobile devices, in that they aren't downlink critical. The sensor deployment requires data to be transmitted from the sensors, towards other devices or a central service. The uplink is therefore the important direction. It can be further assumed that the devices initiates the communication, not the base station.
 
